# CnC_Generals_Zero_Hour

./: CMakeLists.txt  MACOS_PORT_PLAN.md  README.md
.github/workflows/: build-macos.yml
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: PerfTimer.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/Libraries/Include/Lib/: BaseType.h  Compat.h
Generals/Code/Libraries/Source/WWVegas/WWDebug/: wwdebug.h
Generals/Code/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  Compat.h  always.h  bittype.h  bool.h  cpudetect.h  crc.h  int.cpp  lcw.cpp  listnode.h  mempool.h  osdep.h  srandom.cpp  trim.cpp  vector.h  visualc.h  win.h  wwfile.cpp  wwstring.cpp  wwstring.h
Generals/Code/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  matrix3d.cpp  wwmath.cpp  wwmath.h
Generals/Code/Main/: CMakeLists.txt  MacMain.cpp  WinMain.cpp
Generals/Code/Platform/Include/: ICriticalSection.h  PathUtil.h  Platform.h
Generals/Code/Platform/Source/Mac/: MacCriticalSection.cpp  MacPlatformConfig.cpp
Generals/Code/Platform/Source/Win32/: Win32CriticalSection.cpp
Generals/Code/Tools/WW3D/pluglib/: always.h
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: PerfTimer.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/Libraries/Include/Lib/: BaseType.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWAudio/: PriorityVector.h  Threads.h  WWAudio.cpp  WWAudio.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWDebug/: wwdebug.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  Compat.h  always.h  bittype.h  bool.h  cpudetect.h  ini.cpp  lcw.cpp  mempool.h  multilist.h  mutex.h  point.h  sha.h  simplevec.h  srandom.cpp  trim.cpp  vector.h  visualc.h  widestring.h  win.h  wwfile.cpp  wwstring.cpp  wwstring.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  matrix3d.cpp  wwmath.cpp  wwmath.h
GeneralsMD/Code/Main/: CMakeLists.txt  MacMain.cpp  WinMain.cpp
GeneralsMD/Code/Platform/Include/: ICriticalSection.h  IThread.h  PathUtil.h  Platform.h  PlatformConfig.h
GeneralsMD/Code/Platform/Source/Mac/: MacThread.cpp
GeneralsMD/Code/Platform/Source/Win32/: Win32PlatformConfig.cpp  Win32Thread.cpp
docs/: BUILDING_MACOS.md
